add loader, notFoundPage

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,7 @@
 {
     "Language": "English",
-    "Loading": "Loading..."
+    "Loading": "Loading...",
+    "Page not found": "Page not found",
+    "Main": "Main",
+    "About": "About"
 }
