--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,4 +1,7 @@
 {
     "Language": "Русский",
-    "Loading": "Загрузка..."
+    "Loading": "Загрузка...",
+    "Page not found": "Страница не найдена",
+    "Main": "Главная",
+    "About": "О сайте"
 }
